--- a/test-output/Report/ApiTestExecutionResult.html
+++ b/test-output/Report/ApiTestExecutionResult.html
@@ -56,7 +56,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">Apr 22, 2020 09:17:33 PM</span>
+                    <span class="badge badge-primary">Apr 23, 2020 12:07:44 AM</span>
                 </a>
             </li>
         </ul>
@@ -132,8 +132,8 @@
 					<div class="open-test">
 						<div class="test-detail">
 							<p class="name">createBooking</p>
-							<p class="duration text-sm">0h 0m 6s+565ms</p>
-							<span class="datetime">21:17:34 PM</span>
+							<p class="duration text-sm">0h 0m 6s+486ms</p>
+							<span class="datetime">00:07:45 AM</span>
 						</div>
 					</div>
 					<div class="test-contents d-none">
@@ -141,9 +141,9 @@
 							<div class="p-v-10 d-inline-block">
 								<div class="info">
 									<h5 class="test-status text-pass">createBooking</h5>
-									<span class='badge badge-success'>04.22.2020 21:17:34</span>
-									<span class='badge badge-danger'>04.22.2020 21:17:40</span>
-									<span class='badge badge-default'>0h 0m 6s+565ms</span>
+									<span class='badge badge-success'>04.23.2020 00:07:45</span>
+									<span class='badge badge-danger'>04.23.2020 00:07:51</span>
+									<span class='badge badge-default'>0h 0m 6s+486ms</span>
 								</div>
 								<div class="m-t-10 m-l-5">
 									Verify whether /booking end point is able to create new booking details of single user
@@ -160,27 +160,27 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>21:17:34</td>
+				<td>00:07:45</td>
 				<td>
-						Request    : {"bookingdates":{"checkin":"2019-01-01","checkout":"2019-01-07"},"bookingid":1,"depositpaid":true,"email":"mnmoup@gmail.com","firstname":"testFirstName","lastname":"testLasttName","phone":"99999999999","roomid":27}
+						Request    : {"bookingdates":{"checkin":"2019-01-01","checkout":"2019-01-07"},"bookingid":1,"depositpaid":true,"email":"mnmoup@gmail.com","firstname":"testFirstName","lastname":"testLasttName","phone":"99999999999","roomid":24}
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>21:17:38</td>
+				<td>00:07:49</td>
 				<td>
 						Status Code : 201
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>21:17:38</td>
+				<td>00:07:49</td>
 				<td>
 						Response    : {
-    "bookingid": 4,
+    "bookingid": 2,
     "booking": {
-        "bookingid": 4,
-        "roomid": 27,
+        "bookingid": 2,
+        "roomid": 24,
         "firstname": "testFirstName",
         "lastname": "testLasttName",
         "depositpaid": true,
@@ -194,28 +194,28 @@
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>21:17:38</td>
+				<td>00:07:49</td>
 				<td>
 						Booking created Successfully
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>21:17:38</td>
+				<td>00:07:49</td>
 				<td>
 						Verifying created booking
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>21:17:40</td>
+				<td>00:07:51</td>
 				<td>
-						Response    : {"bookings":[{"bookingid":4,"roomid":27,"firstname":"testFirstName","lastname":"testLasttName","depositpaid":true,"bookingdates":{"checkin":"2019-01-01","checkout":"2019-01-07"}}]}
+						Response    : {"bookings":[{"bookingid":2,"roomid":24,"firstname":"testFirstName","lastname":"testLasttName","depositpaid":true,"bookingdates":{"checkin":"2019-01-01","checkout":"2019-01-07"}}]}
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>21:17:40</td>
+				<td>00:07:51</td>
 				<td>
 						Test Pass Successfully!!!!
 				</td>
@@ -235,8 +235,8 @@
 					<div class="open-test">
 						<div class="test-detail">
 							<p class="name">getAllBookings</p>
-							<p class="duration text-sm">0h 0m 2s+50ms</p>
-							<span class="datetime">21:17:40 PM</span>
+							<p class="duration text-sm">0h 0m 3s+140ms</p>
+							<span class="datetime">00:07:51 AM</span>
 						</div>
 					</div>
 					<div class="test-contents d-none">
@@ -244,9 +244,9 @@
 							<div class="p-v-10 d-inline-block">
 								<div class="info">
 									<h5 class="test-status text-pass">getAllBookings</h5>
-									<span class='badge badge-success'>04.22.2020 21:17:40</span>
-									<span class='badge badge-danger'>04.22.2020 21:17:43</span>
-									<span class='badge badge-default'>0h 0m 2s+50ms</span>
+									<span class='badge badge-success'>04.23.2020 00:07:51</span>
+									<span class='badge badge-danger'>04.23.2020 00:07:55</span>
+									<span class='badge badge-default'>0h 0m 3s+140ms</span>
 								</div>
 								<div class="m-t-10 m-l-5">
 									Verify whether /booking end point is able to bring booking details of all the user
@@ -263,20 +263,20 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>21:17:42</td>
+				<td>00:07:55</td>
 				<td>
 						Status Code : 200
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>21:17:42</td>
+				<td>00:07:55</td>
 				<td>
 						Response    : {
     "bookings": [
         {
-            "bookingid": 4,
-            "roomid": 27,
+            "bookingid": 2,
+            "roomid": 24,
             "firstname": "testFirstName",
             "lastname": "testLasttName",
             "depositpaid": true,
@@ -291,7 +291,7 @@
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>21:17:43</td>
+				<td>00:07:55</td>
 				<td>
 						Test Pass Successfully!!!!
 				</td>
@@ -311,8 +311,8 @@
 					<div class="open-test">
 						<div class="test-detail">
 							<p class="name">getSingleBooking</p>
-							<p class="duration text-sm">0h 0m 2s+51ms</p>
-							<span class="datetime">21:17:43 PM</span>
+							<p class="duration text-sm">0h 0m 2s+139ms</p>
+							<span class="datetime">00:07:55 AM</span>
 						</div>
 					</div>
 					<div class="test-contents d-none">
@@ -320,9 +320,9 @@
 							<div class="p-v-10 d-inline-block">
 								<div class="info">
 									<h5 class="test-status text-fail">getSingleBooking</h5>
-									<span class='badge badge-success'>04.22.2020 21:17:43</span>
-									<span class='badge badge-danger'>04.22.2020 21:17:45</span>
-									<span class='badge badge-default'>0h 0m 2s+51ms</span>
+									<span class='badge badge-success'>04.23.2020 00:07:55</span>
+									<span class='badge badge-danger'>04.23.2020 00:07:57</span>
+									<span class='badge badge-default'>0h 0m 2s+139ms</span>
 								</div>
 								<div class="m-t-10 m-l-5">
 									Verify whether /booking end point is able to bring booking details of single user
@@ -339,20 +339,20 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>21:17:45</td>
+				<td>00:07:57</td>
 				<td>
 						Status Code : 200
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>21:17:45</td>
+				<td>00:07:57</td>
 				<td>
 						Response    : {
     "bookings": [
         {
-            "bookingid": 4,
-            "roomid": 27,
+            "bookingid": 2,
+            "roomid": 24,
             "firstname": "testFirstName",
             "lastname": "testLasttName",
             "depositpaid": true,
@@ -367,15 +367,15 @@
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-times text-fail"></i></td>
-				<td>21:17:45</td>
+				<td>00:07:57</td>
 				<td>
-						<textarea disabled class="code-block">java.lang.AssertionError: expected [1] but found [4]
+						<textarea disabled class="code-block">java.lang.AssertionError: expected [1] but found [2]
 	at org.testng.Assert.fail(Assert.java:97)
 	at org.testng.Assert.assertEqualsImpl(Assert.java:136)
 	at org.testng.Assert.assertEquals(Assert.java:118)
 	at org.testng.Assert.assertEquals(Assert.java:575)
 	at org.testng.Assert.assertEquals(Assert.java:585)
-	at com.api.test.RestApiTest.getSingleBooking(RestApiTest.java:38)
+	at com.api.test.RestApiTest.getSingleBooking(RestApiTest.java:37)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -421,8 +421,8 @@
 					<div class="open-test">
 						<div class="test-detail">
 							<p class="name">validateSchemaForSingleUserDetials</p>
-							<p class="duration text-sm">0h 0m 3s+837ms</p>
-							<span class="datetime">21:17:45 PM</span>
+							<p class="duration text-sm">0h 0m 2s+723ms</p>
+							<span class="datetime">00:07:57 AM</span>
 						</div>
 					</div>
 					<div class="test-contents d-none">
@@ -430,9 +430,9 @@
 							<div class="p-v-10 d-inline-block">
 								<div class="info">
 									<h5 class="test-status text-pass">validateSchemaForSingleUserDetials</h5>
-									<span class='badge badge-success'>04.22.2020 21:17:45</span>
-									<span class='badge badge-danger'>04.22.2020 21:17:48</span>
-									<span class='badge badge-default'>0h 0m 3s+837ms</span>
+									<span class='badge badge-success'>04.23.2020 00:07:57</span>
+									<span class='badge badge-danger'>04.23.2020 00:07:59</span>
+									<span class='badge badge-default'>0h 0m 2s+723ms</span>
 								</div>
 								<div class="m-t-10 m-l-5">
 									Verify whether /booking end point is able to bring booking details of single user
@@ -449,27 +449,27 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>21:17:45</td>
+				<td>00:07:57</td>
 				<td>
-						Request    : {"bookingdates":{"checkin":"2019-01-01","checkout":"2019-01-07"},"bookingid":1,"depositpaid":true,"email":"mnmoup@gmail.com","firstname":"testFirstName","lastname":"testLasttName","phone":"99999999999","roomid":15}
+						Request    : {"bookingdates":{"checkin":"2019-01-01","checkout":"2019-01-07"},"bookingid":1,"depositpaid":true,"email":"mnmoup@gmail.com","firstname":"testFirstName","lastname":"testLasttName","phone":"99999999999","roomid":47}
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>21:17:48</td>
+				<td>00:07:59</td>
 				<td>
 						Status Code : 201
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>21:17:48</td>
+				<td>00:07:59</td>
 				<td>
 						Response    : {
-    "bookingid": 5,
+    "bookingid": 3,
     "booking": {
-        "bookingid": 5,
-        "roomid": 15,
+        "bookingid": 3,
+        "roomid": 47,
         "firstname": "testFirstName",
         "lastname": "testLasttName",
         "depositpaid": true,
@@ -483,21 +483,21 @@
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>21:17:48</td>
+				<td>00:07:59</td>
 				<td>
 						Booking created Successfully
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>21:17:48</td>
+				<td>00:07:59</td>
 				<td>
 						Verifying Json Response Schema
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>21:17:48</td>
+				<td>00:07:59</td>
 				<td>
 						Test Pass Successfully!!!!
 				</td>
@@ -570,7 +570,7 @@
 											<i class="fa fa-times text-white"></i>
 										</div>
 									</td>
-									<td>21:17:43 PM</td>
+									<td>00:07:55 AM</td>
 									<td class='linked' test-id='3'>
 										getSingleBooking
 									</td>
@@ -669,7 +669,7 @@
 					<div class="media justify-content-between">
 						<div class="card-header">
 							<h6 class="card-title">Start</h6>
-							<h4 class="font-weight-light mt-4">Apr 22, 2020 09:17:33 PM</h4>
+							<h4 class="font-weight-light mt-4">Apr 23, 2020 12:07:44 AM</h4>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -685,7 +685,7 @@
 					<div class="media justify-content-between">
 						<div class="card-header">
 							<h6 class="card-title">Duration</h6>
-							<h4 class="font-weight-light mt-4">0h 0m 15s+357ms</h4>
+							<h4 class="font-weight-light mt-4">0h 0m 15s+548ms</h4>
 							<span class="text-semibold font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -757,7 +757,7 @@
 </script>
 <script>
 	var timeline = {
-	        "createBooking":6.565,"getAllBookings":2.05,"getSingleBooking":2.051,"validateSchemaForSingleUserDetials":3.837
+	        "createBooking":6.486,"getAllBookings":3.14,"getSingleBooking":2.139,"validateSchemaForSingleUserDetials":2.723
 	};
 </script>
                 </div>
